--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,41 +6,35 @@ on:
   pull_request:
     branches: [ main, master ]
   schedule:
-    - cron: '0 4 * * *'  # Runs every day at 4:00 AM UTC
+    - cron: '0 */4 * * *'  # ⏰ Runs every 4 hours
 
 jobs:
   test:
-    timeout-minutes: 60  # Set a longer timeout for the job
+    timeout-minutes: 60
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout code from repository
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    # Set up Node.js with the LTS version
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 'lts/*'  # Ensure it's the latest LTS version
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
 
-    # Install dependencies using npm ci (ensures clean install from package-lock.json)
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    # Install Playwright and its dependencies
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-    # Run Playwright tests
-    - name: Run Playwright tests
-      run: npx playwright test
+      - name: Run Playwright tests
+        run: npx playwright test
 
-    # Upload test report artifacts if the tests run (even if failed)
-    - name: Upload Playwright Report
-      if: ${{ always() }}  # Always upload the report, even if the tests fail
-      uses: actions/upload-artifact@v4
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      - name: Upload Playwright Report
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
